--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -4,6 +4,7 @@ on:
     push:
         tags:
             - 'v*.*.*'
+    workflow_dispatch:  # Allow manual run on latest commit
 
 jobs:
     build:
