include .h and .c to installation dir

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ exclude = ["demo*", "docs*"]
 include = ["event_engine*"]
 
 [tool.setuptools.package-data]
+"event_engine.base" = ["*.pyi", "*.pyx", "*.pxd", "*.h", "*.c"]
 "event_engine.capi" = ["*.pyi", "*.pyx", "*.pxd", "*.h", "*.c"]
 
 [tool.setuptools.dynamic]
